<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.helloworld</groupId>
  <artifactId>AppiumAppAutomationFrameWork</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>AppiumAppAutomationFrameWork</name>
  <url>http://maven.apache.org</url>


  <properties>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

  </properties>


  <dependencies>


    <dependency>

      <groupId>info.cukes</groupId>

      <artifactId>cucumber-java</artifactId>

      <version>1.2.3</version>

    </dependency>


    <dependency>

      <groupId>info.cukes</groupId>

      <artifactId>cucumber-picocontainer</artifactId>

      <version>1.2.3</version>

      <scope>test</scope>

    </dependency>


    <dependency>

      <groupId>io.appium</groupId>

      <artifactId>java-client</artifactId>

      <version>3.4.1</version>

    </dependency>


    <dependency>

      <groupId>info.cukes</groupId>

      <artifactId>cucumber-junit</artifactId>

      <version>1.2.3</version>

    </dependency>


    <dependency>

      <groupId>org.seleniumhq.selenium</groupId>

      <artifactId>selenium-java</artifactId>

      <version>2.53.0</version>

      <scope>test</scope>

    </dependency>


    <dependency>

      <groupId>junit</groupId>

      <artifactId>junit</artifactId>

      <version>4.11</version>

      <scope>test</scope>

    </dependency>


    <dependency>

      <groupId>com.applitools</groupId>

      <artifactId>eyes-selenium-java</artifactId>

      <version>RELEASE</version>

    </dependency>


    <dependency>

      <groupId>org.apache.commons</groupId>

      <artifactId>commons-io</artifactId>

      <version>1.3.2</version>

    </dependency>


    <dependency>

      <groupId>com.saucelabs</groupId>

      <artifactId>sauce_junit</artifactId>

      <version>2.1.18</version>

      <scope>test</scope>

    </dependency>

  </dependencies>


  <build>


    <plugins>


      <plugin>

        <artifactId>maven-compiler-plugin</artifactId>

        <version>3.3</version>


        <configuration>

          <source>1.8</source>

          <target>1.8</target>

        </configuration>

      </plugin>


      <plugin>

        <groupId>org.apache.maven.plugins</groupId>

        <artifactId>maven-surefire-plugin</artifactId>

        <version>2.18.1</version>


        <configuration>

          <forkCount>6</forkCount>

          <reuseForks>false</reuseForks>

          <argLine>-Duser.language=en</argLine>

          <argLine>-Xmx1024m</argLine>

          <argLine>-XX:MaxPermSize=256m</argLine>

          <argLine>-Dfile.encoding=UTF-8</argLine>

          <useFile>false</useFile>


          <includes>

            <include>**/*.class</include>

          </includes>

          <testFailureIgnore>true</testFailureIgnore>

        </configuration>

      </plugin>


      <plugin>

        <groupId>org.apache.maven.plugins</groupId>

        <artifactId>maven-failsafe-plugin</artifactId>

        <version>2.12</version>


        <executions>


          <execution>

            <id>integration-test</id>


            <goals>

              <goal>integration-test</goal>

              <goal>verify</goal>

            </goals>

          </execution>

        </executions>

      </plugin>


      <plugin>

        <artifactId>maven-resources-plugin</artifactId>

        <version>2.7</version>


        <executions>


          <execution>

            <id>copy-resources</id>

            <!-- here the phase you need -->


            <phase>validate</phase>


            <goals>

              <goal>copy-resources</goal>

            </goals>


            <configuration>

              <outputDirectory>target/test-classes/com/helloworld/AppiumAppAutomationFramework</outputDirectory>


              <resources>


                <resource>

                  <directory>src/test/resources</directory>

                  <filtering>true</filtering>

                </resource>

              </resources>

            </configuration>

          </execution>

        </executions>

      </plugin>

    </plugins>

  </build>

</project>